--- a/smart-mvc/pom.xml
+++ b/smart-mvc/pom.xml
@@ -40,6 +40,12 @@
             <version>1.2.60</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+
     </dependencies>
 
 </project>
